Proper overflow-x fix

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -11,9 +11,11 @@
 html,
 body {
   max-width: var.$max-width;
-  overflow-x: visible;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (max-width: var.$mobile-breakpoint) {
+    overflow-x: hidden;
+  }
 }
 
 body {
@@ -32,7 +34,6 @@ body {
       left: 24px;
       right: 24px;
     }
-    overflow-x: hidden;
   }
 }
 
